# trogdor6

./: CMakeLists.txt  README.md
FDTD/: AdjointGridOperations.cpp  AdjointGridOperations.h  AdjointRunlineCallbacks.h  Arguments.cpp  Arguments.h  CMakeLists.txt  ConstitutiveTensorField.cpp  ConstitutiveTensorField.h  ElectromagneticFieldIndices.cpp  ElectromagneticFieldIndices.h  EncodeOutput.cpp  EncodeOutput.h  Extents.cpp  Extents.h  FieldEnum.h  FillFactorReport.cpp  FillFactorReport.h  ForwardGridOperations.cpp  ForwardGridOperations.h  ForwardRunlineCallbacks.h  GridFields.cpp  GridFields.h  GridOperations.cpp  GridOperations.h  Operation.cpp  Operation.h  OrientationReport.cpp  OrientationReport.h  OrientedVoxels.cpp  OrientedVoxels.h  OutputDirectory.cpp  OutputDirectory.h  PMLField.cpp  PMLField.h  PMLParameters.cpp  PMLParameters.h  PhysicalConstants.cpp  PhysicalConstants.h  Precision.h  PrecisionGeometry.h  (+21 more)
FDTD/operations/: AdjointDB.cpp  AdjointDB.h  AdjointEH.cpp  AdjointEH.h  ForwardDB.h  ForwardDB_2d.h  ForwardEH.cpp  ForwardEH.h  ForwardEH_0.cpp  ForwardEH_0.h  ForwardEH_i.cpp  ForwardEH_i.h  ForwardEH_j.cpp  ForwardEH_j.h  ForwardEH_templated-inl.h  ForwardEH_templated.h  ForwardNondispersiveEH.h  ForwardNondispersiveEH_2d.h  HuygensSurface.cpp  HuygensSurface.h  JMPML.h  OutputEHDB.cpp  OutputEHDB.h  PeriodicBC.h  Source.cpp  Source.h
FDTD/tests/: CMakeLists.txt  testConstitutiveTensorField.cpp  testExtents.cpp  testOrientedVoxels.cpp  testPMLField.cpp  testPMLParameters.cpp  testPermittivitySensitivity.cpp  testTensorGridConstants.cpp
SimpleMesh/: CMakeLists.txt  Search.cpp  Search.h  SimpleMesh.cpp  SimpleMesh.h  XML.cpp  XML.h  main.cpp
SimpleMesh/tests/: CMakeLists.txt  testLine.cpp  testSimpleMesh.cpp
Voxelize/: CMakeLists.txt  ClipTriangle.cpp  ClipTriangle.h  KDTree.cpp  KDTree.h  Raycaster.cpp  Raycaster.h  RowVoxelizer.cpp  RowVoxelizer.h  Voxelize.cpp  Voxelize.h
Voxelize/tests/: CMakeLists.txt  testClipTriangle.cpp  testClipTriangleJacobians.cpp  testFillFactorJacobians.cpp  testFillFactors.cpp  testOrientation.cpp  testOrientationJacobians.cpp  testRaycaster.cpp  testRowVoxelizer.cpp  testVoxelize.cpp
rle/: AVL-inl.h  AVL.h  DynamicRLE-inl.h  DynamicRLE.h  DynamicRLE3-inl.h  DynamicRLE3.h  IndexArray-inl.h  IndexArray.h  IndexArray3-inl.h  IndexArray3.h  MergeRunlines-inl.h  MergeRunlines.h  MultiApply-inl.h  MultiApply.h  RLEBase-inl.h  RLEBase.h  RLEBase3-inl.h  RLEBase3.h  SupportRegion-inl.h  SupportRegion.h  SupportRegion3-inl.h  SupportRegion3.h  VectorData-inl.h  VectorData.h  VectorData3-inl.h  VectorData3.h
tinyxml/: tinyxmlparser.cpp
utility/: CMakeLists.txt  Log.cpp  Log.h  Map.h  Pointer.h  Polynomial-inl.h  Polynomial.h  RLEOperations-inl.h  RLEOperations.h  RationalFunction-inl.h  RationalFunction.h  STLOutput.h  StreamFromString.h  StreamTee.cpp  StreamTee.h  TimeWrapper.cpp  TimeWrapper.h  VectorMatrix-inl.h  VectorMatrix.h  VectorMatrix2-inl.h  VectorMatrix2.h  WriteSomeRLE.h  XMLExtras.h  geometry-inl.h  geometry.h  geometry2-inl.h  geometry2.h
utility/tests/: CMakeLists.txt  testGeometry.cpp  testPolynomial.cpp  testRLEOperations.cpp  testRationalFunction.cpp
